--- a/portainer-ce/Makefile
+++ b/portainer-ce/Makefile
@@ -1,4 +1,6 @@
-up:
-	docker compose up
+up: # example:  make up ARGS="-d"
+	docker compose up ${ARGS}
 down:
 	docker compose down
+clean:
+	docker compose down -v
