--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -14,8 +14,11 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_SPI_THEME_STATIC_MAX_AGE: 2592000
       KC_SPI_THEME_CACHE_THEMES: false
+      KC_HTTP_MAX_POST_SIZE: 20M
+      KC_LOG_LEVEL: INFO
     volumes:
       - ./plugins/keycloak-mfa-plugins/sms-authenticator/target/sms-authenticator-v25.0.2.jar:/opt/keycloak/providers/sms-authenticator-v25.0.2.jar
+      - ./standalone.xml:/opt/keycloak/standalone/configuration/standalone.xml
     command:
       - start-dev
     ports:
@@ -34,6 +37,17 @@ services:
       POSTGRES_PASSWORD: password
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - keycloak
 
 volumes:
   postgres_data:
