--- a/keycloak/plugins/keycloak-mfa-plugins/sms-authenticator/pom.xml
+++ b/keycloak/plugins/keycloak-mfa-plugins/sms-authenticator/pom.xml
@@ -31,9 +31,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20230227</version>
+			<groupId>jakarta.json</groupId>
+			<artifactId>jakarta.json-api</artifactId>
+			<version>2.1.1</version>
 		</dependency>
     </dependencies>
 
