--- a/n8n/docker-compose.yaml
+++ b/n8n/docker-compose.yaml
@@ -1,18 +1,56 @@
-version: '3.7'
+
+
+version: "3.8"
 
 services:
   n8n:
-    image: n8nio/n8n:latest
+    image: repo.sadad.co.ir/docker-hub/n8nio/n8n:latest
     container_name: n8n
-    restart: unless-stopped
+    restart: always
     ports:
       - "5678:5678"
     environment:
-      - TZ=Asia/Tehran                             # Your timezone
-      - N8N_BASIC_AUTH_ACTIVE=true                 # Enable basic auth (optional)
-      - N8N_BASIC_AUTH_USER=admin                  # Username
-      - N8N_BASIC_AUTH_PASSWORD=strongpassword     # Password
-      - N8N_HOST=n8n.local                         # Replace with your domain or IP
-      - WEBHOOK_TUNNEL_URL=https://n8n.local       # Required if behind proxy
+      - GENERIC_TIMEZONE=Europe/Berlin
+      - N8N_BASIC_AUTH_ACTIVE=true
+      - N8N_BASIC_AUTH_USER=admin
+      - N8N_BASIC_AUTH_PASSWORD=supersecret
+      - N8N_HOST=n8n.local
+      - N8N_PORT=5678
+      - N8N_DIAGNOSTICS_ENABLED=false
+      - N8N_PERSONALIZATION_ENABLED=false
+      - N8N_RUDDERSTACK_ENABLED=false
+      - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+      - NODE_TLS_REJECT_UNAUTHORIZED=0
+      - WEBHOOK_URL=https://n8n.local/
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=n8n
+      - DB_POSTGRESDB_PASSWORD=n8n
+        # Elasticsearch URL for n8n workflows
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
     volumes:
       - ./n8n_data:/home/node/.n8n
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:15
+    container_name: n8n_postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=n8n
+      - POSTGRES_PASSWORD=n8n
+      - POSTGRES_DB=n8n
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U n8n"]
+      interval: 10s
+      timeout: 5s
+      retries: 5    
+
+volumes:
+  n8n_data:
+  postgres_data:
